Fixes #1298: Provide visual indication on object last accessed on the Subject Matrix. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1664 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2664,3 +2664,8 @@ a.dnShortcut:hover {
 	text-align: justified;
 	word-wrap: normal;
 }
+
+td.borderHighlight{
+	border-top: 2px solid orange !important; 
+	border-bottom: 2px solid orange !important;
+}
