--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -172,13 +172,14 @@ form#actionForSave input {
 	margin-right: -3px;
 }
 
-@-moz-document url-prefix () {
-    .stacked_bar li {
-	    display: inline-block !important;
-	    width: 0px;
-    	height: 20px;
-	    margin-left: 0px;
-    }
+@-moz-document url-prefix() {
+.stacked_bar li {
+	display: inline-block !important;
+	width: 0px;
+    height: 20px;
+	margin-right: 0px;
+	margin-left: -1px;
+}
 }
 
 .widget .stack .pop-up {
@@ -199,9 +200,38 @@ form#actionForSave input {
 
 .widget .stack .pop-up-visible {
 	color: white;
-	position: relative;
+	position: absolute;
 	display: table;
 	text-align: center;
+}
+
+.widget .popup_legend_min {
+	background-image: url(../../images/popup_small.png);
+	font-weight: bold;
+	text-align:center;
+	margin-left:-7px;
+	width: 56px;
+	height: 29px;
+	display: none;
+	position: absolute;
+	z-index: 1;
+}
+
+.widget .popup_legend_medium {
+	background-image: url(../../images/popup_mid.png);
+	background-repeat: no-repeat;
+	margin-left:-39px;
+	text-align:left;
+	position: absolute;
+	z-index: 1;
+	display: none;
+	height: 50px;
+	width: 120px;
+}
+
+.widget .popup_legend_medium p {
+	margin-left: 5px;
+	margin-top: 5px;
 }
 
 .widget table.captions {
