--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -859,6 +859,20 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     vertical-align: top;
 }
 
+.table_cell_border {
+    padding: 2px;
+    border-style: solid;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 0px;
+    border-bottom-color: #CCCCCC;
+    border-top-color: #E6E6E6;
+    border-left-color: #CCCCCC;
+    border-right-color: #CCCCCC;
+    vertical-align: top;
+}
+
 .table_cell {
     padding: 0.2em;
     border-style: solid;
