Fixes #1343: Administer CRFs Page: Provide visual indication on object last accessed. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1756 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2683,3 +2683,11 @@ td.borderHighlight{
 	border-top: 2px solid orange !important; 
 	border-bottom: 2px solid orange !important;
 }
+
+td.borderHighlightTop{
+	border-top: 2px solid orange !important; 
+}
+
+td.borderHighlightBottom{
+	border-bottom: 2px solid orange !important;
+}
