Refs #1470: Breadcrumb and Item high-lighting broken during rule-copy. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1804 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2695,3 +2695,7 @@ td.borderHighlightTop{
 td.borderHighlightBottom{
 	border-bottom: 2px solid orange !important;
 }
+
+#ruleAssignments > thead > tr.filter > td:last-child {
+    white-space: nowrap;
+}
