Fixes #1509: Add information about randomization result to "View Subject Record" page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1919 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -889,6 +889,18 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     vertical-align: top;
 }
 
+/* Updated style for table cells */
+.table_cell_br, .table_cell_br_colored {
+	padding: 0.2em;
+	border: 1px solid #CCCCCC;
+	vertical-align: top;
+}
+ 
+.table_cell_br_colored {
+	color: #789EC5;
+}
+/* / Updated style for table cells */
+
 .table_horizontal  tr td, .table_vertical tr td{
 	padding: 3px 6px;
 	border-style: solid;
