Fixes #1590: It is impossible to enter discrepancy text if expression is more than 2 lines. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1980 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -405,6 +405,11 @@ div {
 	max-height: 500px;
 }
 
+.ds-scrollable {
+  overflow-y: auto;
+  max-height: 150px;
+}
+
 td.group, td.ui-draggable {
   text-align: left;
 }
