--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -161,13 +161,13 @@ form#actionForSave input {
 	margin-top: 20px;
 }
 
-.widget #enrollment_status_per_site_container .chart_wrapper {
-	width: 310px;
+.widget .enrollment_status_per_site .chart_wrapper {
+	width: 300px;
 }
 
-.widget #enrollment_status_per_site_container table.captions {
-	width: 400px;
-	margin-left: -5px;
+.widget .enrollment_status_per_site table.captions {
+	width: 385px;
+	margin-left: 0;
 }
 
 .widget .stacked_bar {
