Refs #1535: Enrollment status per site. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2158 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -346,9 +346,19 @@ form#actionForSave input {
 	background-color: red;
 }
 
-.dns_assigned_to_me table.signs,.enrollment_status_per_site table.signs {
+.dns_assigned_to_me table.signs {
 	width: 260px;
 	margin-left: 60px;
+}
+
+.enrollment_status_per_site table.signs {
+	width: 260px;
+	margin: 28px 90px;
+}
+
+.enrollment_status_per_site .bar_name {
+	padding-top: 6px;
+	padding-bottom: 1px;
 }
 
 .dns_assigned_to_me .updated {
