Fixes #1585: Cleanup the CRF header. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2186 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2811,3 +2811,12 @@ span.annotated_crfOID, span.annotated_eventOID{
 	color: red; 
 	background:#ffffcc;
 }
+
+.header_crf_cell {
+    border: 1px solid #c5c5c5;
+    border-spacing: 10px;
+    border-collapse: separate;
+    padding: 1px;
+    padding-left: 5px;
+    color: #789EC5;
+}
