Fixed #1946: Item level SDV. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2464 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2891,3 +2891,9 @@ span.annotated_crfOID, span.annotated_eventOID{
 a.dataEntryLink {
     cursor: pointer;
 }
+
+a.sdvItemLink {
+    padding-left: 5px;
+    padding-right: 5px;
+    cursor: pointer;
+}
