--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2392,6 +2392,15 @@ span.asterisk {
     user-select: none;
 }
 
+#pushpin {
+    float: right;
+    cursor: pointer;
+    color: red !important;
+    font-weight: bold;
+    font-size: 0.9em;
+    padding-right: 3px;
+}
+
 #dnShortcutsTable a.closeLink{
     float: right;
     cursor: pointer;
