--- a/web/src/main/webapp/template/print_item_def.html
+++ b/web/src/main/webapp/template/print_item_def.html
@@ -23,7 +23,7 @@
      <div class='item_def_control ${isInline}'> 
       {{each optionNames}}
         <div class='select-option ${isInline}'>
-          <input id="${formOID}-${OID}-${id}" type='radio' {{if itemValue == id}}checked{{/if}}/> {{html label}}
+          <input id="${formOID}-${OID}-${id}" type='radio' {{if itemValue == id}}checked{{/if}}/><span {{if itemValue == id}} style="text-decoration: underline;font-weight: bold;" {{/if}}> {{html label}}</span>
         </div>
       {{/each}}
     </div>
@@ -35,7 +35,7 @@
   <div class='item_def_control ${isInline}'> 
       {{each optionNames}}
         <div class='select-option ${isInline}'>
-          <input id="${formOID}-${OID}-${id}" type='radio'  {{if itemValue == id}}checked{{/if}}/> {{html label}}
+          <input id="${formOID}-${OID}-${id}" type='radio'  {{if itemValue == id}}checked{{/if}}/><span {{if itemValue == id}} style="text-decoration: underline; font-weight: bold;" {{/if}}> {{html label}}</span>
         </div>
       {{/each}}
     </div>
@@ -47,11 +47,10 @@
 	<div class='item_def_control ${isInline}'> 
       {{each multiSelectOptionNames}}
         <div class='select-option ${isInline}'>
-          <input id="${formOID}-${OID}-${id}" type='checkbox' {{if itemValue && (itemValue.split(",")).indexOf(id) != -1}}checked{{/if}}/> {{html label}}
+          <input id="${formOID}-${OID}-${id}" type='checkbox' {{if itemValue && (itemValue.split(",")).indexOf(id) != -1}}checked{{/if}}/><span {{if itemValue && (itemValue.split(",")).indexOf(id) != -1}} style="text-decoration: underline;font-weight: bold;"{{/if}}> {{html label}}</span>
         </div>
       {{/each}}
-    </div>
-  </td>
+    </div>  </td>
 
   {{else responseType == 'textarea'}}
   <td >
