Fixes #2118: Change clincapture logos. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2581 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -427,6 +427,11 @@ a:hover, a:active { color: #789EC5;
     z-index: 2
 }
 
+.logo img {
+	margin-top: 10px;
+	width: 140px;
+}
+
 .nav {
     background-image: url(../images/dots.gif);
     background-repeat: repeat-x;
