Fixes #2088: Item level SDV should be consistent with Simple Conditions logic. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2597 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2406,7 +2406,7 @@ span.asterisk {
     padding-right: 3px;
 }
 
-#dnShortcutsTable a.closeLink{
+#crfShortcutsTable a.closeLink{
     float: right;
     cursor: pointer;
     color: #789EC5;
@@ -2414,23 +2414,23 @@ span.asterisk {
     font-weight: bold;
 }
 
-a.dnShortcut {
+a.crfShortcut {
     color: #789EC5;
     cursor: pointer;
 }
 
-a.dnShortcut:active {
+a.crfShortcut:active {
     text-decoration: none !important;
 }
 
-a.dnShortcut:hover {
+a.crfShortcut:hover {
     text-decoration: underline !important;
 }
-a.dnShortcut:active {
+a.crfShortcut:active {
     text-decoration: none !important;
 }
 
-a.dnShortcut:hover {
+a.crfShortcut:hover {
     text-decoration: underline !important;
 }
 
