Fixes #2233: Print HTML/PDF lost embed images. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2673 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/app.css
+++ b/web/src/main/webapp/includes/css/app.css
@@ -11,12 +11,11 @@
     page-break-after: auto
   }
   td {
-    page-break-inside: avoid;
-    page-break-after: avoid
+    page-break-inside: auto;
+    page-break-after: auto
   }
   thead {
-    display: table-header-group
-  }
+    display: table-header-group  }
   tfoot {
     display: table-footer-group
   }
