Fixes #2247: Override the login page labels at study level. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2719 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2892,6 +2892,11 @@ span.annotated_crfOID, span.annotated_eventOID{
 .maxw250 {
 	max-width: 250px;
 }
+
+.w150 {
+	width: 150px;
+}
+
 .header_crf_cell {
     border: 1px solid #c5c5c5;
     border-spacing: 10px;
