Fixes #2287: Rule Studio browser issue on MAC. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2753 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -20,12 +20,11 @@ body {
 body .container {
   top: 0;
   left: 0;
-  height: 100%;
   width: 70%;
   bottom: 15%;
+  height: 100%;
   position: fixed;
   margin-top: 1rem;
-  overflow-y: hidden;
   padding-right: 1px;
 }
 
@@ -87,7 +86,6 @@ body .panel-body {
   margin-top: 1rem;
   width: 30% !important;
   position: fixed !important;
-  height: 75.9%;
 }
 
 .panel-primary-custom {
@@ -124,6 +122,12 @@ body .panel-body {
   .data .panel {
     margin-left: -2px;
     margin-bottom: 2px;
+  }
+  body .container {
+    padding-right: 0px;
+  }
+  .data {
+    margin-top: 10.4px;
   }
 }
 
