--- a/web/src/main/webapp/template/print_repeating_item.html
+++ b/web/src/main/webapp/template/print_repeating_item.html
@@ -1,4 +1,4 @@
-<td class='repeating_item_group'>
+<td class='repeating_item_group_element'>
     <table border="0">
         <tr class='min-height'>
             <td>
