--- a/web/src/main/webapp/template/print_repeating_item_group.html
+++ b/web/src/main/webapp/template/print_repeating_item_group.html
@@ -1,7 +1,6 @@
-<table border='1'>
+<table border='1' class="repeating-group-table">
     <tr class="repeating_item_group_header">
         <td colspan='${headerColspan}' class='repeating_item_group_header'><strong>{{html name}}</strong></td>
-    </tr>
-    {{html tableHeader}}
+    </tr>    {{html tableHeader}}
     {{html tableBody}}
 </table>
