Fixes #2320: Submit button is absent on "Update Export Job" page. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2789 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1268,7 +1268,7 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 }
 
 .xlong_submit { 
-	background-image: url(../images/button_xlong_submit_BG.gif);
+	background-image: url(../images/button_xlong_submit_BG.png);
 }
 
 select.single_select_property {
