Fixes #2360: Missing Submit button. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2800 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1048,11 +1048,11 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 }
 
 .cancel { 
-    background-image: url(../images/button_cancel_BG.gif);
+    background-image: url(../images/button_cancel_BG.png);
 }
 
 .submit { 
-    background-image: url(../images/button_submit_BG.gif);
+    background-image: url(../images/button_submit_BG.png);
 }
 
 .button_div { background-color:transparent;
