Fixes #2466: Update View Log page uppearance. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2939 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2967,3 +2967,7 @@ table.footerInnerTable {
 .itemHolderClass.aka_padding_norm.aka_cellBorders.align_left {
 	text-align: left;
 }
+
+.pl10 {
+	padding-left: 10px;
+}
