--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -3,7 +3,12 @@
     margin-bottom: 5px;
 }
 
-
+#centralContainer {
+	padding-left: 3em;
+	margin-top: 1em;
+	background-color: white;
+	color: black;
+}
 
 /*See: listSubjectDiscNote.jsp */
 .downloadAllDNotes {
