Fixed #2579: crf-lib should support "divider" & "labeled table". Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3138 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2976,3 +2976,20 @@ table.footerInnerTable {
 .pl10 {
 	padding-left: 10px;
 }
+
+td.randTd {
+    width: 120px;
+    text-align: left;
+}
+
+table.randTable {
+    width: 500px;
+}
+
+input.randButton {
+    text-align: left;
+}
+
+span.autoChange {
+    color: silver;
+}
