Fixed #2625: Caption of "Add" repeating group button exceeds its size in Russian. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3199 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/print.css
+++ b/web/src/main/webapp/includes/print.css
@@ -838,9 +838,10 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 	margin-right: 10px;
 	}
 
-.button_search { background-color:transparent;
+.button_add {
+	background-color:transparent;
 	border-width: 0px;
-	background-image: url(../images/button_Search_BG.gif);
+	background-image: url(../images/create_new.gif);
 	background-repeat: no-repeat;
 	background-position: bottom;
 	font-family: Tahoma, Arial, Helvetica, Sans-Serif;
@@ -848,11 +849,12 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 	line-height: 11px;
 	color: #FFFFFF;
 	font-weight: bold;
-	width: 37px;
-	height: 17px;
+	width: 24px;
+	height: 15px;
 	margin-top: 2px;
 	margin-left: 3px;
-	}
+	margin-bottom: 2px;
+}
 
 .button_remove {
   background-color:transparent;
