--- a/web/src/main/webapp/includes/styles_updated.css
+++ b/web/src/main/webapp/includes/styles_updated.css
@@ -645,36 +645,41 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
   margin-right: 10px;
 }
 
-.button_search_dis { background-color:transparent;
-  border-width: 0px;
-  background-image: url( ../images/button_Search_BG_dis.gif );
-  background-repeat: no-repeat;
-  background-position: bottom;
-  font-family: Tahoma, Arial, Helvetica, Sans-Serif;
-  font-size: 11px;
-  line-height: 11px;
-  color: #E6E6E6;
-  font-weight: bold;
-  width: 37px;
-  height: 17px;
-  margin-top: 2px;
-  margin-left: 3px;
-} 
+.button_add_disabled {
+	background-color:transparent;
+	border-width: 0px;
+	background-image: url(../images/create_new_d.gif);
+	background-repeat: no-repeat;
+	background-position: bottom;
+	font-family: Tahoma, Arial, Helvetica, Sans-Serif;
+	font-size: 11px;
+	line-height: 11px;
+	color: #E6E6E6;
+	font-weight: bold;
+	width: 24px;
+	height: 15px;
+	margin-top: 2px;
+	margin-left: 3px;
+	margin-bottom: 2px;
+}
 
-.button_search { background-color:transparent;
-  border-width: 0px;
-  background-image: url( ../images/button_Search_BG.gif );
-  background-repeat: no-repeat;
-  background-position: bottom;
-  font-family: Tahoma, Arial, Helvetica, Sans-Serif;
-  font-size: 11px;
-  line-height: 11px;
-  color: #FFFFFF;
-  font-weight: bold;
-  width: 37px;
-  height: 17px;
-  margin-top: 2px;
-  margin-left: 3px;
+.button_add {
+	background-color:transparent;
+	border-width: 0px;
+	background-image: url( ../images/create_new.gif );
+	background-repeat: no-repeat;
+	background-position: bottom;
+	font-family: Tahoma, Arial, Helvetica, Sans-Serif;
+	font-size: 11px;
+	line-height: 11px;
+	color: #FFFFFF;
+	font-weight: bold;
+	width: 24px;
+	height: 15px;
+	margin-top: 2px;
+	margin-left: 3px;
+	margin-bottom: 2px;
+	cursor: pointer;
 }
 
 .button_remove {
