Fixed #1393: Allow to Delete CRF from Event. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3208 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2998,3 +2998,8 @@ input.randButton {
 span.autoChange {
     color: silver;
 }
+
+.table_shadow_bottom {
+	border: 1px solid #cccccc;
+	box-shadow: 5px 5px 5px #ccc;
+}
