--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2982,6 +2982,10 @@ table.footerInnerTable {
 	padding-left: 10px;
 }
 
+.pl20 {
+	padding-left: 20px;
+}
+
 td.randTd {
     width: 120px;
     text-align: left;
