Fixed #2758: Ability to completely delete an event. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3350 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2982,6 +2982,10 @@ table.footerInnerTable {
 	padding-left: 10px;
 }
 
+.table_shadow_bottom {
+	border: 1px solid #cccccc;
+	box-shadow: 5px 5px 5px #ccc;
+}
 .pl20 {
 	padding-left: 20px;
 }
