Fixes #2845: Add status "Removed" to the Events Status widget. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3459 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -419,6 +419,10 @@ form#actionForSave input {
 	background-color: #ff0000;
 }
 
+.widget .events_completion .removed {
+	background-color: #B22222;
+}
+
 .widget .available {
 	background-color: #12d2ff;
 }
