Refs #2521: Remove the uniqueness constraint in CRF Name. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3559 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -3035,3 +3035,9 @@ table td.crf_shortcuts_de {
 	margin-bottom: 5px;
 	margin-top: 5px;
 }
+.table_cell .divider {
+	height: 1px;
+	border-bottom: 1px solid #CCCCCC;
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
