Fixed #3010: Transform child items into simple items when CRF is uploaded. Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3649 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2987,12 +2987,16 @@ table.footerInnerTable {
 	border: 1px solid #cccccc;
 	box-shadow: 5px 5px 5px #ccc;
 }
+
 .pl20 {
 	padding-left: 20px;
 }
 
-td.randTd {
-    width: 120px;
+.pl40 {
+	padding-left: 40px;
+}
+
+td.randTd {    width: 120px;
     text-align: left;
 }
 
