Fixed #3120: Create "Email Log" page with basic functionality. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3730 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -3039,9 +3039,14 @@ table td.crf_shortcuts_de {
 	margin-bottom: 5px;
 	margin-top: 5px;
 }
+
 .table_cell .divider {
 	height: 1px;
 	border-bottom: 1px solid #CCCCCC;
 	margin-bottom: 5px;
 	margin-top: 5px;
+}
+
+#emailAuditLogTableName {
+	width: 1200px;
 }
