Fix #3122: Implement "Resend Email" action in the Email Log table. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3803 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -3050,3 +3050,7 @@ table td.crf_shortcuts_de {
 #emailAuditLogTableName {
 	width: 1200px;
 }
+
+#emailAuditLogChildTableName {
+	width: 1000px;
+}
